--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,12 @@
 [versions]
 activityCompose = "1.9.0"
-agp = "8.5.0-alpha07"
-composeBom = "2024.05.00"
+agp = "8.5.0"
+composeBom = "2024.06.00"
 coreKtx = "1.13.1"
 hiddenapibypass = "4.3"
-kotlin = "2.0.0-RC2"
-lifecycleRuntimeKtx = "2.7.0"
-material = "1.13.0-alpha01"
+kotlin = "2.0.0"
+lifecycleRuntimeKtx = "2.8.2"
+material = "1.13.0-alpha03"
 
 [libraries]
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
